Modify git email and name

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,6 @@
 [user]
-	name = Sam E.
-	email = georgesleyetidoux@gmail.com
+	name = Samuel El-Borai
+	email = samuel.elborai@gmail.com
 [push]
 	default = simple
 [core]
