Add zsh configuration

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,18 @@
 !/.bashrc
 !/.bash_profile
 !/.git-prompt.sh
+
+# ZSH
+!/.zshrc
+# !/.zshenv
+!/.oh-my-zsh/
+/.oh-my-zsh/*
+!/.oh-my-zsh/oh-my-zshrc
+!/.oh-my-zsh/themes/
+/.oh-my-zsh/themes/*
+!/.oh-my-zsh/themes/ohayou-tokyo.zsh-theme
+
+# Shell
 !/.profile
 
 # Screenshots
